# enchilada

./: .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  concept_extra.tsv  concept_relationship_extra.tsv  config.docker.yaml  config.yaml  docker-compose.build.yml  mkdocs.yml  pyproject.toml  vocabulary_extra.tsv
.github/workflows/: docs.yml
certs/: enchilada.crt  enchilada.key
data/: concept_extra.tsv  concept_relationship_extra.tsv  vocabulary_extra.tsv
docs/: api.md  configuration.md  fhir-conventions.md  index.md
enchilada/: __main__.py  db.py  main.py  translate.py  vocab.py
tests/: test_db.py  test_mine_concept_maps.py  test_translate.py
